<resources>
    <string name="zyqt_setting_bracelet_dec">(点击此处可完成手环与手机APP的配对)</string>
    <string name="zyqt_setting_bracelet">智能蓝牙手环</string>
    <string name="zyqt_global_alert">提示</string>
    <string name="zyqt_global_ok">确定</string>
    <string name="zyqt_global_save">保存</string>
    <string name="zyqt_global_cancel">取消</string>
    <string name="zyqt_global_1">一</string>
    <string name="zyqt_global_2">二</string>
    <string name="zyqt_global_3">三</string>
    <string name="zyqt_global_4">四</string>
    <string name="zyqt_global_5">五</string>
    <string name="zyqt_global_6">六</string>
    <string name="zyqt_global_7">日</string>
    <string name="zyqt_global_week">星期</string>
    <string name="zyqt_MESSAGE_LOGIN_SUCCESS">登录成功</string>
    <string name="zyqt_MESSAGE_LOGIN_FALSE">登录失败</string>
    <string name="zyqt_MESSAGE_PASSWORD_ERROE">用户名或密码错误</string>
    <string name="zyqt_MESSAGE_NOT_ACTIVITY">用户未激活,请先通过电脑激活</string>
    <string name="zyqt_MESSAGE_CUSTOMER_INFO_EXCEPTION">用户信息验证失败</string>
    <string name="zyqt_MESSAGE_PHONE_PASSWORD_EXCEPTION">手机号或密码不正确</string>
    <string name="zyqt_MESSAGE_PHONE_ERROR">请输入正确的手机号码</string>
    <string name="zyqt_MESSAGE_PHONE_ISEMPTY">账号为空</string>
    <string name="zyqt_MESSAGE_PASSWORD_ISEMPTY">密码为空</string>
    <string name="zyqt_MESSAGE_PASSWORD_ISTOOLEN">密码长度超过30个字符</string>
    <string name="zyqt_MESSAGE_PHONE_ISTOOLEN">账号长度超过30个字符</string>
    <string name="zyqt_MESSAGE_NO_PEDO_DETAIL">运动记录为空</string>
    <string name="zyqt_MESSAGE_SERVER_EXCEPTION">当前网络连接错误，请退出后检查网络</string>
    <string name="zyqt_MESSAGE_SERVER_EXCEPTION2">无此账号，请检查拼写</string>
    <string name="zyqt_MESSAGE_SERVER_EXCEPTION3">对同一手机号码每天最多请求3次短信验证码</string>
    <string name="zyqt_MESSAGE_INTERNET_NONE">当前没有网络,请查看网络设置</string>
    <string name="zyqt_MESSAGE_INTERNET_ERROR">网络异常，请检查网络设置</string>
    <string name="zyqt_MESSAGE_UPDATE_SUCCESS">更新成功</string>
    <string name="zyqt_MESSAGE_UPDATE_FALSE">更新失败</string>
    <string name="zyqt_MESSAGE_UPDATED_VERSION">当前已经是最新版本</string>
    <string name="zyqt_MESSAGE_UPDATE_PWD_SUCCESS">修改成功</string>
    <string name="zyqt_MESSAGE_CROP_FAILED">获取失败请重新选择</string>
    <string name="zyqt_MESSAGE_AVARAR_SET_SUCCESS">头像设置完成</string>
    <string name="zyqt_MESSAGE_COMFIRM_FAIL">验证失败，请重试</string>
    <string name="zyqt_MESSAGE_COMFIRM_PLSINPUTCODE">请输入验证码</string>
    <string name="zyqt_MESSAGE_GET_SERVERLIST_FAILED">服务器暂时无法使用，请稍后再试</string>
    <string name="zyqt_MESSAGE_UPLOAD_GPS_SUCCESS">数据上传成功</string>
    <string name="zyqt_MESSAGE_SYNCHRO_GPS_SUCCESS">数据同步成功</string>
    <string name="zyqt_MESSAGE_SYNCHRO_GPS_FAILED">数据同步失败</string>
    <string name="zyqt_MESSAGE_GPS_NODATA">您还没有数据，赶快开启运动吧！</string>
    <string name="zyqt_MESSAGE_UN_SAVE_DATA">数据未保存</string>
    <string name="zyqt_MESSAGE_GOAL_UPLAOD_FAILED">成就设置失败，请稍后重试</string>
    <string name="zyqt_xlistview_header_hint_normal">下拉刷新</string>
    <string name="zyqt_xlistview_header_hint_ready">松开手指刷新数据</string>
    <string name="zyqt_xlistview_header_hint_loading">努力加载中...</string>
    <string name="zyqt_xlistview_header_last_time">上次更新时间：</string>
    <string name="zyqt_xlistview_footer_hint_normal">查看更多</string>
    <string name="zyqt_xlistview_footer_hint_ready">松开手指载入更多</string>
    <string name="zyqt_string_message_1">输入字符不合法</string>
    <string name="zyqt_app_name">爱动力</string>
    <string name="zyqt_login_title">登录</string>
    <string name="zyqt_pedometer_title">爱动力.走一走</string>
    <string name="zyqt_racelist_title">活动排行榜</string>
    <string name="zyqt_title_weight_manager">体重</string>
    <string name="zyqt_motio_title">运动类型</string>
    <string name="zyqt_friend_title">伙伴</string>
    <string name="zyqt_message_title">消息</string>
    <string name="zyqt_his_title">历史记录</string>
    <string name="zyqt_race_title">比赛</string>
    <string name="zyqt_set_title">个人设置</string>
    <string name="zyqt_pedo_detail_title">运动详细</string>
    <string name="zyqt_record_mood_title">运动录入</string>
    <string name="zyqt_upload_info_title">上传记录</string>
    <string name="zyqt_brief_info">运动情况</string>
    <string name="zyqt_stepnum">步数</string>
    <string name="zyqt_stepnum_unit">步</string>
    <string name="zyqt_distance_unit">千米</string>
    <string name="zyqt_sports_info">运动状态</string>
    <string name="zyqt_main_result">简报</string>
    <string name="zyqt_main_input">录入</string>
    <string name="zyqt_main_info">历史</string>
    <string name="zyqt_main_setting">设置</string>
    <string name="zyqt_phonenum_title">手机号</string>
    <string name="zyqt_password_title">密 码</string>
    <string name="zyqt_sport_plan_title">日计划步数</string>
    <string name="zyqt_update_day_title">更新天数</string>
    <string name="zyqt_usernamekey">username</string>
    <string name="zyqt_update_day_key">update_day</string>
    <string name="zyqt_passwordkey">password</string>
    <string name="zyqt_firstnamekey">firstname</string>
    <string name="zyqt_lastnamekey">lastname</string>
    <string name="zyqt_phonenumkey">phonenum</string>
    <string name="zyqt_sport_plan">sport_plan</string>
    <string name="zyqt_update_data">更新数据</string>
    <string name="zyqt_string_menu_joker"></string>
    <string name="zyqt_fri_label_btn_call">馒头</string>
    <string name="zyqt_fri_label_btn_ta">米饭</string>
    <string name="zyqt_fri_label_btn_sms">汉堡</string>
    <string name="zyqt_new_progress">"计划进度: "</string>
    <string name="zyqt_hour24">24小时</string>
    <string name="zyqt_basicInfo">基本情况</string>
    <string name="zyqt_cal">千卡</string>
    <string name="zyqt_avtivity_detials_radiobutton_left">个人成绩</string>
    <string name="zyqt_avtivity_detials_radiobutton_right">团队成绩</string>
    <string name="zyqt_share_sina">新浪微博</string>
    <string name="zyqt_share_tencent">腾讯微博</string>
    <string name="zyqt_share_renren">人人网</string>
    <string name="zyqt_share_douban">豆瓣</string>
    <string name="zyqt_share_qzone">Qzone</string>
    <string name="zyqt_share_test">测试</string>
    <string name="zyqt_self_center">个人中心</string>
    <string name="zyqt_achievement_title">成就</string>
    <string name="zyqt_website_http_qurey_adress">http://phr.cmri.cn/sport/openClientApi.do?action=</string>
    <string name="zyqt_website_http_qurey_avater_image">http://phr.cmri.cn/sport/UserAvatar/</string>
    <string name="zyqt_brief_textview_updatetime">刷新时间</string>
    <string name="zyqt_brief_textview_runrecord_text">运动情况</string>
    <string name="zyqt_brief_textview_moststep_text">最多步数:</string>
    <string name="zyqt_brief_textview_time_text">日期:</string>
    <string name="zyqt_brief_textview_moscal_text">最多消耗热量：</string>
    <string name="zyqt_brief_textview_step_text">步数</string>
    <string name="zyqt_brief_textview_minute_text">分钟</string>
    <string name="zyqt_rank_textview_7day">七日</string>
    <string name="zyqt_rank_textview_1day">昨日</string>
    <string name="zyqt_brief_textview_clock_text">时间</string>
    <string name="zyqt_brief_textview_timelong_text">时长</string>
    <string name="zyqt_brief_textview_range_text">距离</string>
    <string name="zyqt_textview_today">当天</string>
    <string name="zyqt_textview_7today">7天</string>
    <string name="zyqt_textview_30today">近一个月</string>
    <string name="zyqt_calendar_choice_date">选择日期</string>
    <string name="zyqt_brief_textview_hhmm_text">hh:mm</string>
    <string name="zyqt_text_zeronum">0</string>
    <string name="zyqt_text_m">km</string>
    <string name="zyqt_image_content_description">is OK</string>
    <string name="zyqt_history_hot">卡路里(千卡)</string>
    <string name="zyqt_history_hot1">热量</string>
    <string name="zyqt_history_qianka">千卡</string>
    <string name="zyqt_history_uploadtime">上传时间</string>
    <string name="zyqt_face_image">我的头像</string>
    <string name="zyqt_nickname">昵称</string>
    <string name="zyqt_telephonenumber">手机号码 :</string>
    <string name="zyqt_text_password">密 码 :</string>
    <string name="zyqt_text_login">登  录</string>
    <string name="zyqt_text_remember_password">记住密码</string>
    <string name="zyqt_textview_forgetpwd">忘记密码</string>
    <string name="zyqt_textview_autologin">自动登录</string>
    <string name="zyqt_textview_exercise_intensity">运动强度</string>
    <string name="zyqt_textview_exercise_step">运动步数</string>
    <string name="zyqt_textview_packname">文件名：SportHealth.apk</string>
    <string name="zyqt_textview_daxiao">大小:</string>
    <string name="zyqt_textview_rankid">序号</string>
    <string name="zyqt_textview_race0">敬请期待</string>
    <string name="zyqt_textivew_race1">进行中</string>
    <string name="zyqt_textivew_race3">已结束</string>
    <string name="zyqt_textview_race2">我参与的</string>
    <string name="zyqt_textview_orgnize">个人排行榜</string>
    <string name="zyqt_textivew_member">团队排行榜</string>
    <string name="zyqt_textview_grouprank">队内排行榜</string>
    <string name="zyqt_textview_updatedate">更新数据</string>
    <string name="zyqt_textview_weight">体 重(kg)：</string>
    <string name="zyqt_textview_steplong">步 长(cm)：</string>
    <string name="zyqt_textview_mygroup">所 属  组：</string>
    <string name="zyqt_textview_runtarget">运动目标：</string>
    <string name="zyqt_textview_aboutapk">关于爱动力</string>
    <string name="zyqt_textview_version">当前版本：</string>
    <string name="zyqt_textview_inspect_version">检查新版本</string>
    <string name="zyqt_textview_guid">新手导引</string>
    <string name="zyqt_textview_update_password">修 改 密 码</string>
    <string name="zyqt_textview_binddevice">设备管理</string>
    <string name="zyqt_textview_boot_run">开机启动:</string>
    <string name="zyqt_textview_tellfriend">告诉朋友</string>
    <string name="zyqt_textview_feedback">意见反馈</string>
    <string name="zyqt_textview_exit">注 销 登 录</string>
    <string name="zyqt_textview_input_rank_target">请输入运动目标</string>
    <string name="zyqt_textview_runtarget_describe">在这里您可以设置您每天的运动目标步数(单位：步)</string>
    <string name="zyqt_textview_save">保 存</string>
    <string name="zyqt_textview_input_newPassword">请输入新密码</string>
    <string name="zyqt_textview_inputAgain_newPassword">请再次输入新密码</string>
    <string name="zyqt_textview_twice_password">确认两次密码输入相同</string>
    <string name="zyqt_textview_sure_update">确 认 修 改</string>
    <string name="zyqt_textview_input_oldPassword">请输入原始密码</string>
    <string name="zyqt_textview_input_yourOlldPassword">请输入您的原始密码</string>
    <string name="zyqt_textview_proving">验 证</string>
    <string name="zyqt_textview_friend_weixin">发给微信好友</string>
    <string name="zyqt_textview_circle_friend_weixin">分享到朋友圈</string>
    <string name="zyqt_textview_none_date">暂无数据</string>
    <string name="zyqt_textview_race_now">进行中</string>
    <string name="zyqt_setting_step_switch">计步开关</string>
    <string name="zyqt_textview_loading">努力加载中...</string>
    <string name="zyqt_textview_dropListview">下拉刷新</string>
    <string name="zyqt_textview_yes_update">上次更新</string>
    <string name="zyqt_textview_thistext">This is Content</string>
    <string name="zyqt_textview_ym_sendtime">This is State or Send Time</string>
    <string name="zyqt_textview_select_date">选择日期</string>
    <string name="zyqt_textview_avgStep">平均步数</string>
    <string name="zyqt_textview_arrTarget">目标实现</string>
    <string name="zyqt_textview_todaynum">持续天数</string>
    <string name="zyqt_textview_avgJiang">平均步数奖</string>
    <string name="zyqt_textview_rangeStep">距离入围步数:</string>
    <string name="zyqt_textview_jibai">已击败：</string>
    <string name="zyqt_textview_racestep">步</string>
    <string name="zyqt_textview_ranknow">您的名次</string>
    <string name="zyqt_textview_de_people">的人</string>
    <string name="zyqt_textview_arrTarget_jiang">达标率奖</string>
    <string name="zyqt_texview_marginTarget">距离入围:</string>
    <string name="zyqt_textview_weight_about">我的体重</string>
    <string name="zyqt_textview_weight_record">体重记录</string>
    <string name="zyqt_text_share_cancel">取消</string>
    <string name="zyqt_text_target_weight">体重目标：</string>
    <string name="zyqt_text_input_target_weight">请在这里输入您的体重目标是多少(单位：千克)</string>
</resources>