<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/zyqt_background"
    android:orientation="vertical" >

    <include layout="@layout/zyqt_title_menu" />

    <EditText
        android:id="@id/zyqt_edittext_input_your_weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/zyqt_text_target_weight"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="@string/zyqt_text_input_target_weight"
            android:textColor="@android:color/black" />

        <Button
            android:id="@id/zyqt_button_set_weight"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="5dip"
            android:background="@drawable/zyqt_listitem_button_round"
            android:text="@string/zyqt_textview_save" />

    </LinearLayout>

</LinearLayout>