<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/zyqt_title_menu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/zyqt_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tx_race_soon"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/zyqt_textview_race0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tx_race_now"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/zyqt_textview_race_now"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tx_race_finish"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/zyqt_textivew_race3"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager_race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>